# mctrl

./: .eslintrc.json  .gitignore  .gitmodules  CNAME  LICENSE  README.md  WhoNeedsFrameworks-hakyll.cabal  about.md  contact.markdown  index.html  index_old.html  mctrl.cabal  publish.sh  site.hs  stack.yaml
markdown-pages/: about.md  contact.markdown  contact.md  index.md
pages/: about.md  index.md
pages/projects/: android.md  radio.md  thesis.md
posts/: 2016-03-15-unite-and-conquer.markdown  2018-07-31-robocode-learner.markdown  2018-09-30-modern-radios.markdown  2019-02-15-data-visualization.markdown  infovis.md
projects/: 2019-01-01-infovis.md  2019-02-01-radio.md  2019-03-01-thesis.md  android.md  infovis.md  radio.md  thesis.md
static/css/: footer.css  general.css  main.css  navigation.css  spaceg.stylesheets.css  styles.css
static/img/: .directory
static/js/: scripts.js
templates/: default.html  footer.html  gallery.html  head.html  image-modal.html  infovis_template.html  main.html  nav.html  page.html  post-list.html  post.html  preloader.html  projects.html
