name:                mctrl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mctrl-io/mctrl
license:             BSD3
license-file:        LICENSE
author:              Mission CTRL
maintainer:          fox@trqoiz.com
copyright:           2022 Mission CTRL
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable mctrl
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       pandoc
